[metadata]
name = nuxeo
version = 2.0.0
author = Nuxeo
author-email = maintainers-python@nuxeo.com
description = Nuxeo REST API Python client
long_description = file: README.rst
url = https://github.com/nuxeo/nuxeo-python-client
home-page = https://doc.nuxeo.com/nxdoc/python-client
keywords = api, rest, automation, client, nuxeo, ecm
license = Apache Software
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries

[options]
zip-safe = False
include_package_data = True
packages = nuxeo
install_requires = requests >= 2.12.2
setup_requires = pytest-runner
tests_require = pytest

[options.package_data]
* = *.cfg, *.rst, *.txt

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --showlocals --failed-first --no-print-logs -v
