[metadata]
name = nuxeo
version = 2.4.4
author = Nuxeo
author-email = maintainers-python@nuxeo.com
description = Nuxeo REST API Python client
long_description = file: README.rst
url = https://github.com/nuxeo/nuxeo-python-client
home-page = https://doc.nuxeo.com/nxdoc/python-client
keywords = api, rest, automation, client, nuxeo, ecm
license = Apache Software
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries

[options]
zip-safe = False
include_package_data = True
packages =
    nuxeo
    nuxeo.handlers
install_requires = requests >= 2.12.2
setup_requires = requests >= 2.12.2

[options.extras_require]
s3 = boto3 >= 1.10.48

[options.package_data]
* = *.cfg, *.rst, *.txt

[bdist_wheel]
universal = 1

[tool:pytest]
addopts =
    --cov-report=xml
    --cov-append
    --cov-config=.coveragerc
    --cov=nuxeo
    --showlocals
    --failed-first
    --no-print-logs
    --log-level=DEBUG
    # -W error
    -v

[flake8]
ignore =
    # E203 whitespace before ':', but E203 is not PEP 8 compliant
    E203
    # W503 line break before binary operator, but W503 is not PEP 8 compliant
    W503
max-line-length = 120
exclude =
    .eggs
    .git
    .tox
    ftest
