[metadata]
name = nuxeo
version = 6.0.4
author = Nuxeo
author_email = maintainers-python@nuxeo.com
description = Nuxeo REST API Python client
long_description = file: README.rst
url = https://github.com/nuxeo/nuxeo-python-client
home_page = https://doc.nuxeo.com/nxdoc/python-client
keywords = api, rest, automation, client, nuxeo, ecm
license = Apache Software
license_files =
    LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries

[options]
include_package_data = True
packages =
    nuxeo
    nuxeo.auth
    nuxeo.handlers
    nuxeo.tcp
install_requires =
    requests >= 2.12.2
setup_requires =
    requests >= 2.12.2

[options.extras_require]
oauth2 =
    authlib >= 0.15.3
    jwt >=1.2.0
s3 =
    boto3 >= 1.10.48

[options.package_data]
* = *.cfg, *.rst, *.txt

[tool:pytest]
addopts =
    --cov-report=xml
    --cov-report=term-missing
    --cov-append
    --cov-config=.coveragerc
    --cov=nuxeo
    --showlocals
    --failed-first
    --log-level=DEBUG
    # -W error
    -vv
    # Trait all tests as flaky by default
    --force-flaky
    --no-success-flaky-report

[flake8]
ignore =
    # E203 whitespace before ':', but E203 is not PEP 8 compliant
    E203
    # W503 line break before binary operator, but W503 is not PEP 8 compliant
    W503
max-line-length = 120
exclude =
    .eggs
    .git
    .tox
    venv
inline-quotes = double
